fix follow button hidden on mobile

--- a/frontend/src/custom.scss
+++ b/frontend/src/custom.scss
@@ -57,5 +57,6 @@ body {
 }
 
 .user-info {
-  min-width: 800px;
+  max-width: 100%;
+  width: 100%;
 }
